--- a/style.css
+++ b/style.css
@@ -34,8 +34,6 @@ h1 {
 	margin-top: -50px;
 	font-family: 'Lato', sans-serif;
 	font-weight: 700;
-	line-height: 1.1;
-	letter-spacing: -1px;
 	margin: 0 auto;
 	text-align: center;
 	width: 60%;
@@ -300,34 +298,40 @@ input.submit:hover, input.submit:focus {
 	}
 }
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
 
 	h1 {
-		font-size: 4rem;
+		font-size: 6rem;
 		padding-top: 6rem;
+		padding-top: 0;
 	}
 
 	h2 {
-		font-size: 6rem;
+		font-size: 4rem;
 	}
 
 	h3 {
 		display: none;
 	}
-
-	header {
-		background: rgba(17, 35, 120, 1.0);
-		height: 20rem;
+	a.start {
+		font-size: 2 rem;
+		padding: 12px;
 	}
-
 	.neighbourhood-form {
 		width: 100%;
 		padding: 3%;
 	}
-
 	.result {
 		width: 100%;
 		height: 100vh;
+		padding: 2rem;
+	}
+	.result .top {
+		font-size: 2rem;
+	}
+	.result .description {
+		font-size: 1.5rem;
+		margin: 0;
 	}
 }
 
