--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 html {
 	font-size: 10px;
 }
-
 body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
@@ -27,7 +26,6 @@ body {
 	padding: 0;
 	position: relative;
 }
-
 h1 {
 	font-size: 12rem;
 	text-transform: uppercase;
@@ -38,7 +36,6 @@ h1 {
 	text-align: center;
 	width: 60%;
 }
-
 h2 {
 	margin: 0 auto 4%;
 	font-weight: 400;
@@ -49,15 +46,13 @@ h2 {
 	width: 50%;
 	text-align: center;
 }
-
 .start-button {
 	width: 100%;
-	display: flex;
 	display: -webkit-flex;
-	justify-content: center;
+	display: flex;
 	-webkit-justify-content: center;
+	justify-content: center;
 }
-
 a.start {
 	text-decoration: none;
 	width: 170px;
@@ -75,34 +70,28 @@ a.start {
 	transition: all 0.3s ease;
 	letter-spacing: 1px;
 }
-
 a.start:hover {
 	color: #0f1F7A;
 	background: #F0DFBC;
 	border: 3px solid #F0DFBC;
 }
-
-
 header {
-	background: linear-gradient(rgba(17, 35, 120, 0.3), rgba(17, 35, 120, 1.0)), url(toronto-skyline2.jpg) no-repeat fixed;
+	background: linear-gradient(rgba(17, 35, 120, 0.3), rgba(17, 35, 120, 1.0)), url(toronto-skyline2.jpg) no-repeat center;
 	background-size: cover;
+	max-width: 100%;
 	width: 100%;
 	padding-bottom: 3%;
 }
-
 .twitter {
 	height: 70px; /* Hold height until button loads */
 }
-
 .twitter-share-button {
 	margin: 20px;
 }
-
 .main-container{
 	background: #0f1f7a;
 	padding-bottom: 4%;
 }
-
 p {
 	display: block;
 	width: 100%;
@@ -113,7 +102,6 @@ p {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;	
 }
-
 .neighbourhood-form {
 	font-weight: 400;
 	background: #F0DFBC;
@@ -122,23 +110,27 @@ p {
 	margin: 0 auto;
 	color: rgb(17,35,120);
 	padding: 5% 8%;
+	display:-webkit-flex;
 	display:flex;
+	-webkit-justify-content: center;
 	justify-content: center;
+	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
 }
-
 .question {
+	display:-webkit-flex;
 	display: flex;
+	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
+	-webkit-justify-content: space-between;
 	justify-content: space-between;
+	-webkit-align-items: center;
 	align-items: center;
 	text-align: center;
 }
-
 input[type=radio] {
     display:none; 
 }
-
 input[type=radio] + label {
 	margin-bottom: 4%;
 	padding: 1% 3%;
@@ -149,28 +141,23 @@ input[type=radio] + label {
 	width: 30%;
 	height: 9rem;
 	font-size: 1.8rem;
-	line-height: 1.5;
-	display: flex;
 	display: -webkit-flex;
-	flex-wrap: wrap;
+	display: flex;
 	-webkit-flex-wrap: wrap;
-	align-items: center;
+	flex-wrap: wrap;
 	-webkit-align-items: center;
-	justify-content: center;
+	align-items: center;
 	-webkit-justify-content: center;
-	transition: all 0.2s ease;
+	justify-content: center;
 }
-
 input[type=radio] + label:hover {
 	background: rgba(17, 35, 120, 0.8);
 }
-
 input[type=radio]:checked + label {
 	background: #F0DFBC;
    	color: rgb(17,35,120);
    	border: 3px solid rgb(17,35,120);
 }
-
 input.submit {
    background-image: none;
    background: #F0DFBC;
@@ -184,39 +171,37 @@ input.submit {
    transition: all 0.3s ease;
    border-radius: 3px;
 }
-
 input.submit:hover, input.submit:focus {
 	background: rgba(17, 35, 120, 0.7);
 	color: #F0DFBC;
 }
-
 .result-container {
 	height: 100vh;
 	position: fixed;
 	top: 0;
 	left: 0;
+	display: -webkit-flex;
 	display: flex;
+	-webkit-justify-content: center;
 	justify-content: center;
+	-webkit-align-items: center;
 	align-items: center;
 	background: rgb(17, 35, 120);
 }
-
 .result {
 	color: rgb(17,35,120);
 	background: #F0DFBC;
 	padding: 5rem;
 	width: 70%;
+	/*display: -webkit-flex;
 	display: flex;
-	display: -webkit-flex;
-	flex-wrap: wrap;
 	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;*/
 }
-
 .result h2 {
 	padding: 0;
 	width: 100%;
 }
-
 .result .top {
 	font-family: 'Lato', sans-serif;
 	font-size: 4rem;
@@ -224,32 +209,25 @@ input.submit:hover, input.submit:focus {
 	text-transform: uppercase;
 	margin-bottom: 2rem;
 }
-
 .result h2.neighbourhood {
 	font-weight: 800;
 }
-
 .result .description {
 	font-size: 2.2rem;
-	line-height: 1.5;
 	margin: 20px 0;
 }
-
 .result .close {
 	text-align: right;
 	font-weight: 400;
 	text-decoration: underline;
 	font-size: 1.8rem;
 }
-
 .result .close:hover {
 	cursor: pointer;
 }
-
 .result h2 {
 	text-transform: none;
 }
-
 .hidden {
 	display: none;
 }
@@ -273,25 +251,20 @@ input.submit:hover, input.submit:focus {
 	h3 {
 		width: 90%;
 	}
-
 	.neighbourhood-form {
 		width: 95%;
 		padding: 3%;
 	}
-
 	input.submit {
 		font-size: 2rem;
 		margin: 3% auto;
 	}
-
 	input[type=radio] + label {
 		margin: 2%;
 		color: #F0DFBC;
 		width: 45%;
 		height: 9rem;
-		/*font-size: 1.6rem;*/
 	}
-
 	.result {
 		width: 90%;
 		height: 100vh;
@@ -305,11 +278,9 @@ input.submit:hover, input.submit:focus {
 		padding-top: 6rem;
 		padding-top: 0;
 	}
-
 	h2 {
 		font-size: 4rem;
 	}
-
 	h3 {
 		display: none;
 	}
@@ -328,6 +299,7 @@ input.submit:hover, input.submit:focus {
 	}
 	.result .top {
 		font-size: 2rem;
+		margin: 0;
 	}
 	.result .description {
 		font-size: 1.5rem;
@@ -343,11 +315,9 @@ input.submit:hover, input.submit:focus {
 		height: 5rem;
 		font-size: 1.6rem;
 	}
-
 	input.submit {
 		width: 60%;
 	}
-
 }
 
 
